tests/errors/first_stage/.define/unexpected_chars/unexpected_chars.am
.define myconst = 0 a
